yelb/yelb-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-ui
  namespace: yelb
spec:
    podSelector:
      matchLabels:
        app: yelb-ui
    ingress:
    - from:
      ports:
        - port: 80
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-appserver
  namespace: yelb
spec:
    podSelector:
      matchLabels:
        app: yelb-appserver
    ingress:
    - from:
        - podSelector:
            matchLabels:
              app: yelb-ui
      ports:
        - port: 4567
          protocol: TCP        
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-server
  namespace: yelb
spec:
    podSelector:
      matchLabels:
        app: redis-server
    ingress:
    - from:
        - podSelector:
            matchLabels:
              app: yelb-appserver
      ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-db
  namespace: yelb
spec:
    podSelector:
      matchLabels:
        app: yelb-db
    ingress:
    - from:
        - podSelector:
            matchLabels:
              app: yelb-appserver
      ports:
        - port: 5432
          protocol: TCP
